index2-höz kis szöveg

--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -10,6 +10,6 @@
     <a href="index2.html">A könyv</a>
     <a href="index.html">Karaktergeneráló</a>
 
-    ez a második oldal
+    ez a második oldal ahol egy halom tartalom lesz a világról, meg egyéb dolgokról
 </body>
 </html>
