index2 + a tulajdonság minimum-maximumok OK

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -683,6 +683,7 @@
             <tr>
                 <td style="text-align: center;">
                     <div id="divek" style="text-align: center ;">
+                        <label style="font-size: 13px; text-align: left; background-color:grey; padding-right: 50px;">1: válassz fajt. 2: válassz kasztot. 3: válassz vallást. 4: Értékek kidobása. 5: számolj! ---------->>></label>
                         <button onclick="dice()" id="tulbutton"
                             style="padding: 4px; background-color: lightsalmon; border-radius: 4px;">Értékek
                             kidobása!</button>
