--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -7,8 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index2.html">A könyv</a>
-    <a href="index.html">Karaktergeneráló</a>
+    <table id="table1" width="100%">
+        <tr>
+            <td colspan="2">
+                <div id="divek" style="background-color:lightgrey ; font-size: 12px; text-align: center;">
+                    <a href="index2.html">A könyv</a>
+                    <a href="index.html">Karaktergeneráló</a>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     ez a második oldal ahol egy halom tartalom lesz a világról, meg egyéb dolgokról
 </body>
