pap főkaszt folyamatban

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -40,26 +40,26 @@
                 <div id="divek">
                     <label for="">Vallás választása: </label>
                     <select name="" id="vallasselector">
-                        <option value="">Válassz</option>
-                        <option value="">Domvik</option>
-                        <option value="">Ranagol</option>
-                        <option value="">Tharr</option>
-                        <option value="">Sogron</option>
-                        <option value="">Morgana</option>
-                        <option value="">Adron</option>
-                        <option value="">Alborne</option>
-                        <option value="">Antoh</option>
-                        <option value="">Arel</option>
-                        <option value="">Darton</option>
-                        <option value="">Della</option>
-                        <option value="">Dreina</option>
-                        <option value="">Ellana</option>
-                        <option value="">Gilron</option>
-                        <option value="">Krad</option>
-                        <option value="">Kyel</option>
-                        <option value="">Noir</option>
-                        <option value="">Orwella</option>
-                        <option value="">Uwel</option>
+                        <option value="valassz">Válassz</option>
+                        <option value="domvik">Domvik</option>
+                        <option value="ranagol">Ranagol</option>
+                        <option value="tharr">Tharr</option>
+                        <option value="sogron">Sogron</option>
+                        <option value="morgana">Morgena</option>
+                        <option value="adron">Adron</option>
+                        <option value="alborne">Alborne</option>
+                        <option value="antoh">Antoh</option>
+                        <option value="arel">Arel</option>
+                        <option value="darton">Darton</option>
+                        <option value="della">Della</option>
+                        <option value="dreina">Dreina</option>
+                        <option value="ellana">Ellana</option>
+                        <option value="gilron">Gilron</option>
+                        <option value="krad">Krad</option>
+                        <option value="kyel">Kyel</option>
+                        <option value="noir">Noir</option>
+                        <option value="orwella">Orwella</option>
+                        <option value="uwel">Uwel</option>
                     </select>
                 </div>
             </td>
