--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -415,7 +415,7 @@
             </table>
         </tr>
 
-        <table style="width: 50%; font-size: 10px;">
+        <table style="width: 50%; font-size: 10px;" id="kepzettsegtabla">
             <tr>
                 <td colspan="3">
                     <div id="divek" style="background-color:lightgrey; text-align: center; font-size: 12px;">
