hm-ek megvannak limittel

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -91,7 +91,7 @@
             <td> <!--ez a káosz kezdete, a harci értékek jönnek ide -->
                 <div id="divek" style="text-align: center; background-color: grey ;">
                     Harci értékek
-                    (Harci érték módosítók: <output id="maxhm" type="number" style="border: 1px solid; padding: 2px; background-color: beige;">0</output>)
+                    (Harci érték módosítók: <output id="maxhm" type="number" style="border: 1px solid; padding: 2px; background-color: beige;">0</output>) Max HM: <output id="hmlimit" type="number"></output>
                 </div>
             </td>
            
@@ -125,7 +125,7 @@
                             <label for="">Kezdeményező érték: </label>
                             <label for="">=</label>
                             <output id="ke" type="number"></output>
-                            <label for="">HM = </label>
+                            <label for="">+HM = </label>
                             <button onclick="keplus()" style="font-size: 9px;">+</button>
                             <button onclick="keminus()" style="font-size: 9px;">-</button>
                         </div>
@@ -165,7 +165,7 @@
                             <label for="">Támadó érték: </label>
                             <label for="">=</label>
                             <output id="te" type="number"></output>
-                            <label for="">HM =</label>
+                            <label for="">+HM =</label>
                             <button onclick="teplus()" style="font-size: 9px;">+</button>
                             <button onclick = "teminus()" style="font-size: 9px;">-</button>
                         </div>
@@ -204,7 +204,7 @@
                             <label for="">Védő érték: </label>
                             <label for="">=</label>
                             <output id="ve" type="number"></output>
-                            <label for="">HM =</label>
+                            <label for="">+HM =</label>
                             <button onclick="veplus()" style="font-size: 9px;">+</button>
                             <button onclick = "veminus()" style="font-size: 9px;">-</button>
 
@@ -244,7 +244,7 @@
                             <label for="">Célzó érték: </label>
                             <label for="">=</label>
                             <output id="ce" type="number"></output>
-                            <label for="">HM =</label>
+                            <label for="">+HM =</label>
                             <button onclick="ceplus()" style="font-size: 9px;">+</button>
                             <button onclick = "ceminus()" style="font-size: 9px;">-</button>
 
