--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -91,7 +91,7 @@
             <td> <!--ez a káosz kezdete, a harci értékek jönnek ide -->
                 <div id="divek" style="text-align: center; background-color: grey ;">
                     Harci értékek
-                    (Harci érték módosítók: <output id="maxhm" type="number" style="border: 1px solid; padding: 2px; background-color: beige;">0</output>) Max HM: <output id="hmlimit" type="number"></output>
+                    (Harci érték módosítók: <output id="maxhm" type="number" style="border: 1px solid; padding: 2px; background-color: beige; border-radius: 3px;">0</output> ) Max HM: <output id="hmlimit" type="number"></output>
                 </div>
             </td>
            
