--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Magus</title>
 </head>
 <body>
     <table id="table1" width="100%">
         <tr>
             <td colspan="2">
-                <div id="divek" style="background-color:lightgrey ; font-size: 12px; text-align: center;">
-                    <a href="index2.html">A könyv</a>
-                    <a href="index.html">Karaktergeneráló</a>
+                <div id="divszalagcim" style="font-size: 12px; text-align: center;">
+                    <button onclick="location.href='index2.html';">Töredékek</button>
+                    <button onclick="location.href='index.html';">Karakterkészítő</button>
                 </div>
             </td>
         </tr>
