--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -119,7 +119,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="ero">0</output>
+                            <output type="number" id="ero"">0</output>
                         </div>
                     </td>
 
@@ -128,7 +128,7 @@
                         <div id="divek">
                             <label for="">Kezdeményező érték: </label>
                             <label for="">=</label>
-                            <output id="ke" type="number"></output>
+                            <output id="ke" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                             <label for="">+HM = </label>
                             <button onclick="keplus()" style="font-size: 9px;">+</button>
                             <button onclick="keminus()" style="font-size: 9px;">-</button>
@@ -169,7 +169,7 @@
                         <div id="divek">
                             <label for="">Támadó érték: </label>
                             <label for="">=</label>
-                            <output id="te" type="number"></output>
+                            <output id="te" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                             <label for="">+HM =</label>
                             <button onclick="teplus()" style="font-size: 9px;">+</button>
                             <button onclick="teminus()" style="font-size: 9px;">-</button>
@@ -209,7 +209,7 @@
                         <div id="divek">
                             <label for="">Védő érték: </label>
                             <label for="">=</label>
-                            <output id="ve" type="number"></output>
+                            <output id="ve" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                             <label for="">+HM =</label>
                             <button onclick="veplus()" style="font-size: 9px;">+</button>
                             <button onclick="veminus()" style="font-size: 9px;">-</button>
@@ -250,7 +250,7 @@
                         <div id="divek">
                             <label for="">Célzó érték: </label>
                             <label for="">=</label>
-                            <output id="ce" type="number"></output>
+                            <output id="ce" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                             <label for="">+HM =</label>
                             <button onclick="ceplus()" style="font-size: 9px;">+</button>
                             <button onclick="ceminus()" style="font-size: 9px;">-</button>
@@ -291,7 +291,7 @@
                         <div id="divek">
                             <label for="">Életerő pontok: </label>
                             <label for="">=</label>
-                            <output id="ep" type="number"></output>
+                            <output id="ep" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                         </div>
                     </td>
                 </tr>
@@ -326,7 +326,7 @@
                         <div id="divek">
                             <label for="">Fájdalomtűrés pontok: </label>
                             <label for="">=</label>
-                            <output id="fp" type="number"></output>
+                            <output id="fp" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                         </div>
                     </td>
 
@@ -363,7 +363,7 @@
                         <div id="divek">
                             <label for="">Mana pont: </label>
                             <label for="">=</label>
-                            <output id="mana" type="number"></output>
+                            <output id="mana" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                         </div>
                     </td>
 
@@ -399,7 +399,7 @@
                         <div id="divek">
                             <label for="">Pszi pontok: </label>
                             <label for="">=</label>
-                            <output id="pszi" type="number"></output>
+                            <output id="pszi" type="number" style= "background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
                         </div>
                     </td>
 
@@ -432,10 +432,10 @@
                     </td>
                     <td style="width: 35%;">
                         <!--ez a káosz kezdete, a harci értékek jönnek ide -->
-                        <div id="divek">
+                        <div id="divek" style="background-color: rgb(196, 206, 145);">
                             <label for="">Egyéb: </label>
                             <label for="">=</label>
-                            <output id="egyeb"></output>
+                            <output id="egyeb" style= "font-size: 10px;"></output>
                         </div>
                     </td>
 
@@ -456,7 +456,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <!--ez az alap képzettséglista! -->
                 <td>
                     <output id="kepzettseg1"></output>
@@ -660,7 +660,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg3"></output>
                 </td>
@@ -680,7 +680,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg5"></output>
                 </td>
@@ -700,7 +700,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg7"></output>
                 </td>
@@ -720,7 +720,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg9"></output>
                 </td>
@@ -740,7 +740,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg11"></output>
                 </td>
@@ -760,7 +760,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg13"></output>
                 </td>
@@ -780,7 +780,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg15"></output>
                 </td>
@@ -800,7 +800,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg17"></output>
                 </td>
@@ -820,7 +820,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg19"></output>
                 </td>
@@ -840,7 +840,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg21"></output>
                 </td>
@@ -860,7 +860,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg23"></output>
                 </td>
@@ -880,7 +880,7 @@
                 </td>
             </tr>
 
-            <tr style="background-color: grey;">
+            <tr style="background-color: lightyellow;">
                 <td>
                     <output id="kepzettseg25"></output>
                 </td>
