--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -9,6 +9,10 @@
     <title>Mágus</title>
 </head>
 
+<script>
+    window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.")
+</script>
+
 <body>
 
     <table id="table1" width="100%">
